jtools/src/azure/vlab/crackle/IDL.java
/* Generated By:JavaCC: Do not edit this line. IDL.java */
package azure.vlab.crackle;

import java.util.*;
import java.lang.*;
import java.io.*;

/**
 * YET ANOTHER INTERFACE DEFINITION LANGUAGE
 * Actually this started out as an IDL but ended up
 * as a remote server C++ code compiler. It still can be
 * used as an IDL
 */
public class IDL implements IDLConstants
{
  protected static azure.vlab.crackle.Module module;
  protected static Structure structure;
  protected static Enumerator enumerator;
  protected static Prototype prototype;
  protected static Message message;
  protected static Table table;
  protected static Field field;
  protected static Type type;
  protected static Operation operation;
  protected static Action action;
  protected static Vector messageNos;
  static private IDL parser;
  private static PrintWriter idlLog;
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;

  static
  {
    jj_la1_init_0();
    jj_la1_init_1();
  }

  final private int[] jj_la1 = new int[69];
  final private JJCalls[] jj_2_rtns = new JJCalls[3];
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  /**
   * Generated Token Manager.
   */
  public IDLTokenManager token_source;
  /**
   * Current token.
   */
  public Token token;
  /**
   * Next token.
   */
  public Token jj_nt;
  SimpleCharStream jj_input_stream;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  /**
   * Whether we are looking ahead.
   */
  private boolean jj_lookingAhead = false;
  private boolean jj_semLA;
  private int jj_gen;
  private boolean jj_rescan = false;
  private int jj_gc = 0;
  private java.util.List jj_expentries = new java.util.ArrayList();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  /**
   * Constructor with InputStream.
   */
  public IDL(java.io.InputStream stream)
  {
    this(stream, null);
  }

  /**
   * Constructor with InputStream and supplied encoding
   */
  public IDL(java.io.InputStream stream, String encoding)
  {
    try
    {
      jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
    }
    catch (java.io.UnsupportedEncodingException e)
    {
      throw new RuntimeException(e);
    }
    token_source = new IDLTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 69; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Constructor.
   */
  public IDL(java.io.Reader stream)
  {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new IDLTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 69; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Constructor with generated Token Manager.
   */
  public IDL(IDLTokenManager tm)
  {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 69; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /**
   * Reads input from standard input
   */
  public static void main(String[] args)
  {
    try
    {
      PrintWriter outLog = new PrintWriter(System.out);
      for (int i = 0; i < args.length; i++)
      {
        System.out.println(args[i] + ": Parsing ...");
        azure.vlab.crackle.Module module = run(args[i], outLog);
      }
    }
    catch (Exception e)
    {
      e.printStackTrace();
    }
  }

  /**
   * Reads input from supplied file
   *
   * @param inFile is the input file to parse
   * @return Module from IDL package
   */
  public static azure.vlab.crackle.Module run(String inFile, PrintWriter outLog)
  {
    try
    {
      FileReader inputReader = new FileReader(inFile);
      return run(inFile, inputReader, outLog);
    }
    catch (FileNotFoundException e)
    {
      e.printStackTrace();
      return null;
    }
  }

  public static azure.vlab.crackle.Module run(String inFile, Reader reader, PrintWriter outLog)
  {
    idlLog = outLog;
    try
    {
      parser = new IDL(reader);
      messageNos = new Vector();
      parser.idlStart();
      module.sourceName = inFile;
      return module;
    }
    catch (Exception e)
    {
      outLog.println("ParseException [" + e.getMessage() + "]");
      e.printStackTrace();
      return null;
    }
  }

  static String uniqueNumber()
  {
    int procNumber = azure.vlab.crackle.Module.hashCode(prototype.name);
    if (procNumber < 0)
      procNumber *= -1;
    Integer newNo;
    incProcNumber:
    for (; ; procNumber++)
    {
      for (int i = 0; i < messageNos.size(); i++)
      {
        Integer n = (Integer) messageNos.elementAt(i);
        if (n.intValue() == procNumber)
          continue incProcNumber;
      }
      newNo = procNumber;
      messageNos.addElement(newNo);
      break;
    }
    return newNo.toString();
  }

  private static void jj_la1_init_0()
  {
    jj_la1_0 = new int[]{0x0, 0x0, 0x20000, 0x0, 0x0, 0xfbfdfc00, 0x0, 0x4000, 0x41010000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x280, 0x0, 0x0, 0x0, 0x0, 0x100, 0x9afcbc00, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x18000000, 0x80800, 0x2100000, 0x240000, 0xc00000, 0x1afcbc00, 0x80000000, 0x80, 0x0, 0x0, 0x0, 0x0, 0x9afcbc00, 0x0, 0x80, 0x80, 0x0, 0x1000000, 0x0, 0x100, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x4000000, 0x0, 0x80,};
  }

  private static void jj_la1_init_1()
  {
    jj_la1_1 = new int[]{0x100000, 0x100000, 0x0, 0x100000, 0x1, 0xe1f06, 0xe0000, 0x0, 0x800, 0x100000, 0x200000, 0xc0000, 0xe0000, 0x400000, 0x1000, 0x100000, 0x4000000, 0x100000, 0x1000, 0x100000, 0x8000000, 0x100000, 0x0, 0x4000000, 0x700, 0x700, 0x400000, 0x0, 0x1006, 0xe0000, 0xe0000, 0x1000000, 0x100000, 0x10000000, 0x10000018, 0x10000018, 0x0, 0x0, 0x0, 0x0, 0x0, 0x1006, 0x0, 0x0, 0x700, 0x700, 0x100000, 0x8000000, 0x1006, 0x40000000, 0x1000, 0x80001000, 0x100000, 0x0, 0x40000000, 0x1000, 0x1000, 0x80, 0x40000000, 0x1000, 0x20, 0x40000000, 0x1000, 0x40, 0xe0000, 0xe0000, 0x0, 0x100000, 0x1000,};
  }

  final public void idlStart() throws ParseException
  {
    Token t;
    String s;
    boolean hasLinemarker = false;
    jj_consume_token(MODULE);
    t = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 52:
        jj_consume_token(52);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
    }
    module = new Module();
    module.name = t.image;
    module.hash(t.image);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case PACKAGE:
        jj_consume_token(PACKAGE);
        s = idlPackage();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
          case 52:
            jj_consume_token(52);
            break;
          default:
            jj_la1[1] = jj_gen;
            ;
        }
        module.packageName = s;
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
    }
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case VERSION:
        jj_consume_token(VERSION);
        t = jj_consume_token(QSTRING);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
          case 52:
            jj_consume_token(52);
            break;
          default:
            jj_la1[3] = jj_gen;
            ;
        }
        module.version = t.image;
        module.hash(t.image);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
    }
    label_1:
    while (true)
    {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
      {
        case BOOLEAN:
        case BYTE:
        case CHAR:
        case DOUBLE:
        case ENUM:
        case FLOAT:
        case MODULE:
        case INT:
        case INT8:
        case INT16:
        case INT32:
        case INT64:
        case LONG:
        case MESSAGE:
        case SHORT:
        case STRING:
        case STRING2:
        case STRUCT:
        case TABLE:
        case UNSIGNED:
        case VOID:
        case WCHAR:
        case PRIVATE:
        case PROTECTED:
        case PUBLIC:
        case PRAGMA:
        case IDENTIFIER:
        case LINENO:
        case PYTHON:
        case CODELINE:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_1;
      }
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
      {
        case LINENO:
        case PYTHON:
        case CODELINE:
          idlCodeBlock();
          break;
        default:
          jj_la1[6] = jj_gen;
          if (jj_2_1(2))
          {
            idlStructure();
            module.structures.addElement(structure);
          } else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
              case ENUM:
                idlEnum();
                module.enumerators.addElement(enumerator);
                break;
              default:
                jj_la1[7] = jj_gen;
                if (jj_2_2(2))
                {
                  idlPrototype();
                  module.prototypes.addElement(prototype);
                } else
                {
                  switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                  {
                    case MESSAGE:
                      idlMessage();
                      break;
                    case TABLE:
                      idlTable();
                      module.tables.addElement(table);
                      break;
                    case PRAGMA:
                      t = jj_consume_token(PRAGMA);
                      s = t.image;
                      module.pragmas.addElement(s.substring(6));
                      break;
                    case MODULE:
                      idlSubModule();
                      break;
                    default:
                      jj_la1[8] = jj_gen;
                      jj_consume_token(-1);
                      throw new ParseException();
                  }
                }
            }
          }
      }
    }
  }

  final public void idlSubModule() throws ParseException
  {
    Token t;
    jj_consume_token(MODULE);
    t = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 52:
        jj_consume_token(52);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
    }
  }

  final public String idlPackage() throws ParseException
  {
    Token t;
    String s;
    t = jj_consume_token(IDENTIFIER);
    s = t.image;
    label_2:
    while (true)
    {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
      {
        case 53:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_2;
      }
      jj_consume_token(53);
      t = jj_consume_token(IDENTIFIER);
      s = s + "." + t.image;
    }
    {
      if (true) return s;
    }
    throw new Error("Missing return statement in function");
  }

  final public void idlCodeBlock() throws ParseException
  {
    Token t;
    boolean hasLinemarker = false;
    boolean markPython = false;
    label_3:
    while (true)
    {
      if (jj_2_3(2))
      {
        t = jj_consume_token(LINENO);
        if (module.codeStart == 0)
          module.codeStart = t.beginLine;
        hasLinemarker = true;
        module.code.addElement(t.image);
      } else
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
          case PYTHON:
            t = jj_consume_token(PYTHON);
            markPython = true;
            break;
          case CODELINE:
            t = jj_consume_token(CODELINE);
            if (module.codeStart == 0)
              module.codeStart = t.beginLine;
            if (module.codeLine == 0 && hasLinemarker == false)
              module.codeLine = t.beginLine;
            if (markPython == true)
              module.python.addElement(t.image);
            else
              module.code.addElement(t.image);
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
      }
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
      {
        case LINENO:
        case PYTHON:
        case CODELINE:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_3;
      }
    }
  }

  final public void idlMessage() throws ParseException
  {
    Token t;
    String s;
    Integer i;
    t = jj_consume_token(MESSAGE);
    if (module.messageStart == 0)
      module.messageStart = t.beginLine;
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 54:
        jj_consume_token(54);
        t = jj_consume_token(INTEGER);
        jj_consume_token(55);
        s = t.image;
        i = Integer.parseInt(s);
        module.messageBase = i.intValue();
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
    }
    jj_consume_token(56);
    label_4:
    while (true)
    {
      idlMsgElement();
      module.messages.addElement(message);
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
      {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_4;
      }
    }
    jj_consume_token(57);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 52:
        jj_consume_token(52);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
    }
  }

  final public void idlMsgElement() throws ParseException
  {
    Token t;
    t = jj_consume_token(IDENTIFIER);
    message = new Message();
    message.name = t.image;
    module.hash(t.image);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 58:
        jj_consume_token(58);
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
    }
    t = jj_consume_token(QSTRING);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 52:
        jj_consume_token(52);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
    }
    message.value = t.image;
  }

  final public void idlTable() throws ParseException
  {
    Token t;
    jj_consume_token(TABLE);
    t = jj_consume_token(IDENTIFIER);
    table = new Table();
    table.name = t.image;
    jj_consume_token(56);
    label_5:
    while (true)
    {
      idlMsgElement();
      table.messages.addElement(message);
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
      {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_5;
      }
    }
    jj_consume_token(57);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 52:
        jj_consume_token(52);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
    }
  }

  final public void idlEnum() throws ParseException
  {
    Token t;
    jj_consume_token(ENUM);
    t = jj_consume_token(IDENTIFIER);
    enumerator = new Enumerator();
    enumerator.name = t.image;
    module.hash(t.image);
    jj_consume_token(56);
    idlEnumElement();
    label_6:
    while (true)
    {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
      {
        case 59:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_6;
      }
      jj_consume_token(59);
      idlEnumElement();
    }
    jj_consume_token(57);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 52:
        jj_consume_token(52);
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
    }
  }

  final public void idlEnumElement() throws ParseException
  {
    Token t;
    String s;
    t = jj_consume_token(IDENTIFIER);
    s = t.image;
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
    {
      case 58:
        jj_consume_token(58);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
          case INTEGER:
            t = jj_consume_token(INTEGER);
            break;
          case CHARACTER:
            t = jj_consume_token(CHARACTER);
            break;
          default:
            jj_la1[22] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        s = s + " = " + t.image;
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
    }
    enumerator.elements.addElement(s);
  }
